Feeble attempts at making other parts of REST-API
